Proteomics: on python 3

--- a/notebooks/06_Prot/Distance.ipynb
+++ b/notebooks/06_Prot/Distance.ipynb
@@ -3,13 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from __future__ import print_function\n",
-    "\n",
     "import math\n",
     "import timeit\n",
     "\n",
@@ -18,62 +14,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Structure exists: './pdb1tup.ent' \n"
+      "Downloading PDB structure '1TUP'...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 6146.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 6146.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 6147.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 6147.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain C is discontinuous at line 6148.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain C is discontinuous at line 6148.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain E is discontinuous at line 6149.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain E is discontinuous at line 6149.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain F is discontinuous at line 6171.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain F is discontinuous at line 6171.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 6185.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 6185.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 6383.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 6383.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain C is discontinuous at line 6453.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain C is discontinuous at line 6453.\n",
       "  PDBConstructionWarning)\n"
      ]
     }
    ],
    "source": [
+    "#XXX\n",
     "repository = PDB.PDBList()\n",
     "parser = PDB.PDBParser()\n",
-    "repository.retrieve_pdb_file('1TUP', pdir='.')\n",
+    "repository.retrieve_pdb_file('1TUP', file_format='pdb', pdir='.')  # XXX\n",
     "p53_1tup = parser.get_structure('P 53', 'pdb1tup.ent')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Atom ZN> [ 58.10800171  23.24200058  57.42399979]\n",
-      "<Atom ZN> [ 60.10800171  17.9810009   75.93099976]\n",
-      "<Atom ZN> [ 33.65299988   0.403       74.11499786]\n"
+      "<Atom ZN> [58.108 23.242 57.424]\n",
+      "<Atom ZN> [60.108 17.981 75.931]\n",
+      "<Atom ZN> [33.653  0.403 74.115]\n"
      ]
     }
    ],
@@ -89,10 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Suggest a pymol viewing"
@@ -100,10 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Try this in numba?\n",
@@ -122,55 +111,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "[ 58.10800171  23.24200058  57.42399979]\n",
-      "S 2.27892096249 [ 60.31700134  23.31800079  57.97900009]\n",
-      "C 2.92437196013 [ 56.99300003  23.94300079  54.81299973]\n",
-      "C 3.40801176963 [ 57.77000046  21.2140007   60.14199829]\n",
-      "S 2.32622437996 [ 57.06499863  21.45199966  58.48199844]\n",
-      "C 3.62725094648 [ 61.61000061  24.08699989  57.00099945]\n",
-      "C 3.85772919812 [ 61.14799881  25.06100082  55.89699936]\n",
-      "C 3.45665374923 [ 58.88600159  20.86700058  55.0359993 ]\n",
-      "C 3.08721447067 [ 57.20500183  25.09900093  59.71900177]\n",
-      "C 3.06412055976 [ 58.04700089  22.03800011  54.60699844]\n",
-      "S 2.22531584465 [ 56.91400146  25.05400085  57.91699982]\n",
-      "N 1.99182735373 [ 57.75500107  23.07299995  55.47100067]\n",
+      "[58.108 23.242 57.424]\n",
+      "C 3.4080117696286854 [57.77  21.214 60.142]\n",
+      "S 2.3262243799594877 [57.065 21.452 58.482]\n",
+      "C 3.4566537492335123 [58.886 20.867 55.036]\n",
+      "C 3.064120559761192 [58.047 22.038 54.607]\n",
+      "N 1.9918273537290707 [57.755 23.073 55.471]\n",
+      "C 2.9243719601324525 [56.993 23.943 54.813]\n",
+      "C 3.857729198122736 [61.148 25.061 55.897]\n",
+      "C 3.62725094648044 [61.61  24.087 57.001]\n",
+      "S 2.2789209624943494 [60.317 23.318 57.979]\n",
+      "C 3.087214470667822 [57.205 25.099 59.719]\n",
+      "S 2.2253158446520818 [56.914 25.054 57.917]\n",
       "\n",
-      "[ 60.10800171  17.9810009   75.93099976]\n",
-      "C 2.98523321742 [ 61.33200073  20.38199997  74.64700317]\n",
-      "C 3.80512639027 [ 62.57300186  18.26300049  78.81600189]\n",
-      "S 2.24232090692 [ 58.97800064  19.40200043  77.24700165]\n",
-      "C 3.41769274437 [ 57.5929985   15.78299999  75.20700073]\n",
-      "C 3.18032005125 [ 61.52099991  17.13599968  78.65200043]\n",
-      "S 2.32547215821 [ 58.58599854  17.08200073  74.41999817]\n",
-      "C 3.46720709671 [ 62.27199936  17.17399979  73.34500122]\n",
-      "C 3.2038921042 [ 57.62400055  18.41699982  77.90699768]\n",
-      "C 3.11391347252 [ 62.06100082  18.61499977  73.58999634]\n",
-      "N 2.05645999722 [ 61.36600113  19.05599976  74.70999908]\n",
-      "S 2.20704048852 [ 61.28699875  16.4470005   76.99299622]\n",
+      "[60.108 17.981 75.931]\n",
+      "C 3.41769274437124 [57.593 15.783 75.207]\n",
+      "S 2.3254721582053093 [58.586 17.082 74.42 ]\n",
+      "C 3.4672070967122894 [62.272 17.174 73.345]\n",
+      "C 3.1139134725185587 [62.061 18.615 73.59 ]\n",
+      "N 2.0564599972249455 [61.366 19.056 74.71 ]\n",
+      "C 2.985233217423681 [61.332 20.382 74.647]\n",
+      "C 3.805126390272999 [62.573 18.263 78.816]\n",
+      "C 3.1803200512467478 [61.521 17.136 78.652]\n",
+      "S 2.2070404885225816 [61.287 16.447 76.993]\n",
+      "C 3.2038921042012745 [57.624 18.417 77.907]\n",
+      "S 2.242320906916762 [58.978 19.402 77.247]\n",
       "\n",
-      "[ 33.65299988   0.403       74.11499786]\n",
-      "C 3.40762621232 [ 34.44200134  -0.639       77.26200104]\n",
-      "C 3.203789888 [ 35.56900024   2.89400005  73.49199677]\n",
-      "C 3.42690033588 [ 31.43499947  -1.55700004  72.38800049]\n",
-      "N 3.8418381161 [ 32.61999893  -3.26699996  73.64199829]\n",
-      "S 2.37880142799 [ 32.94200134  -0.60699999  72.08200073]\n",
-      "S 2.13150441609 [ 32.39099884   1.93900001  74.88400269]\n",
-      "C 3.15756814671 [ 36.18299866  -0.46900001  72.43900299]\n",
-      "C 3.07685585317 [ 30.81999969   1.08200002  75.10500336]\n",
-      "C 2.98511466119 [ 36.22499847   0.98000002  72.71399689]\n",
-      "S 2.32042002279 [ 34.45299911  -1.23300004  75.5530014 ]\n",
-      "N 2.09591300499 [ 35.24000168   1.60300004  73.45600128]\n",
-      "C 3.94050478004 [ 35.47399902   0.46200001  77.60900116]\n"
+      "[33.653  0.403 74.115]\n",
+      "N 3.8418381161044053 [32.62  -3.267 73.642]\n",
+      "C 3.4269003358801373 [31.435 -1.557 72.388]\n",
+      "S 2.3788014279880345 [32.942 -0.607 72.082]\n",
+      "C 3.1575681467123577 [36.183 -0.469 72.439]\n",
+      "C 2.985114661190097 [36.225  0.98  72.714]\n",
+      "N 2.0959130049879975 [35.24   1.603 73.456]\n",
+      "C 3.2037898879982705 [35.569  2.894 73.492]\n",
+      "C 3.940504780036419 [35.474  0.462 77.609]\n",
+      "C 3.4076262123188337 [34.442 -0.639 77.262]\n",
+      "S 2.3204200227887206 [34.453 -1.233 75.553]\n",
+      "C 3.076855853166918 [30.82   1.082 75.105]\n",
+      "S 2.1315044160944145 [32.391  1.939 74.884]\n"
      ]
     }
    ],
@@ -185,10 +172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -216,16 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "88.2678031921\n"
+      "86.03363559998343\n"
      ]
     }
    ],
@@ -238,10 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_closest_alternative(pdb_struct, ref_atom, distance):\n",
@@ -261,16 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38.8225793839\n"
+      "31.851707400005576\n"
      ]
     }
    ],
@@ -282,27 +261,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Standard\n",
-      "85.9097957611\n",
-      "85.0714921951\n",
-      "84.3131065369\n",
-      "85.9227895737\n",
-      "85.7550859451\n",
+      "85.08649739999328\n",
+      "86.50681579999855\n",
+      "86.79630599999655\n",
+      "96.95437099999253\n",
+      "96.21982420001132\n",
       "Optimized\n",
-      "35.1483106613\n",
-      "37.5775098801\n",
-      "58.0827951431\n",
-      "135.914206505\n",
-      "133.298301697\n"
+      "30.253444099980698\n",
+      "32.69531210000878\n",
+      "52.965772600009586\n",
+      "142.53310030001103\n",
+      "141.26269519999823\n"
      ]
     }
    ],
@@ -322,18 +299,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#for interesting distances"
@@ -342,23 +315,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
