--- a/notebooks/06_Prot/PDB.ipynb
+++ b/notebooks/06_Prot/PDB.ipynb
@@ -2,28 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from __future__ import print_function\n",
     "from Bio import PDB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading PDB structure '1TUP'...\n",
+      "Structure exists: './pdb1tup.ent' \n",
       "Downloading PDB structure '1OLG'...\n",
       "Downloading PDB structure '1YCQ'...\n"
      ]
@@ -34,48 +29,47 @@
        "'./pdb1ycq.ent'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#XXX\n",
     "repository = PDB.PDBList()\n",
-    "repository.retrieve_pdb_file('1TUP', pdir='.')\n",
-    "repository.retrieve_pdb_file('1OLG', pdir='.')\n",
-    "repository.retrieve_pdb_file('1YCQ', pdir='.')"
+    "repository.retrieve_pdb_file('1TUP', pdir='.', file_format='pdb')\n",
+    "repository.retrieve_pdb_file('1OLG', pdir='.', file_format='pdb')\n",
+    "repository.retrieve_pdb_file('1YCQ', pdir='.', file_format='pdb')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 6146.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 6146.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 6147.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 6147.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain C is discontinuous at line 6148.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain C is discontinuous at line 6148.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain E is discontinuous at line 6149.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain E is discontinuous at line 6149.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain F is discontinuous at line 6171.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain F is discontinuous at line 6171.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 6185.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 6185.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 6383.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 6383.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain C is discontinuous at line 6453.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain C is discontinuous at line 6453.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 1125.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain A is discontinuous at line 1125.\n",
       "  PDBConstructionWarning)\n",
-      "/home/tra/Dropbox/soft/biopython/Bio/PDB/StructureBuilder.py:87: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 1160.\n",
+      "/home/tiago_antao/anaconda3/lib/python3.6/site-packages/Bio/PDB/StructureBuilder.py:90: PDBConstructionWarning: WARNING: Chain B is discontinuous at line 1160.\n",
       "  PDBConstructionWarning)\n"
      ]
     }
@@ -89,77 +83,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    structure_method: x-ray diffraction\n",
+      "                name:  tumor suppressor p53 complexed with dna\n",
       "                head: antitumor protein/dna\n",
-      "             journal: AUTH   Y.CHO,S.GORINA,P.D.JEFFREY,N.P.PAVLETICHTITL   CRYSTAL STRUCTURE OF A P53 TUMOR SUPPRESSOR-DNATITL 2 COMPLEX: UNDERSTANDING TUMORIGENIC MUTATIONS.REF    SCIENCE                       V. 265   346 1994REFN                   ISSN 0036-8075PMID   8023157\n",
+      "     deposition_date: 1995-07-11\n",
+      "        release_date: 1995-07-11\n",
+      "    structure_method: x-ray diffraction\n",
+      "          resolution: 2.2\n",
+      " structure_reference:\n",
+      "                   -> n.p.pavletich,k.a.chambers,c.o.pabo the dna-binding domain of p53 contains the four conserved regions and the major mutation hot spots genes dev. v. 7 2556 1993 issn 0890-9369 \n",
+      "                   -> b.vogelstein,k.w.kinzler p53 function and dysfunction cell(cambridge,mass.) v. 70 523 1992 issn 0092-8674 \n",
       "   journal_reference: y.cho,s.gorina,p.d.jeffrey,n.p.pavletich crystal structure of a p53 tumor suppressor-dna complex: understanding tumorigenic mutations. science v. 265 346 1994 issn 0036-8075 8023157 \n",
+      "              author: Y.Cho,S.Gorina,P.D.Jeffrey,N.P.Pavletich\n",
       "\n",
       "            compound:\n",
       "\n",
       "                       1:\n",
+      "                        misc: \n",
       "                    molecule: dna (5'-d(*tp*tp*tp*cp*cp*tp*ap*gp*ap*cp*tp*tp*gp*cp*cp*cp*a p*ap*tp*tp*a)-3') \n",
-      "                        misc: \n",
-      "                  engineered: yes\n",
       "                       chain: e\n",
-      "\n",
-      "\n",
-      "                       3:\n",
-      "                    molecule: protein (p53 tumor suppressor )\n",
-      "                        misc: \n",
       "                  engineered: yes\n",
-      "                       chain: a, b, c\n",
       "\n",
       "\n",
       "                       2:\n",
-      "                    molecule: dna (5'-d(*ap*tp*ap*ap*tp*tp*gp*gp*gp*cp*ap*ap*gp*tp*cp*tp*a p*gp*gp*ap*a)-3') \n",
       "                        misc: \n",
-      "                  engineered: yes\n",
+      "                    molecule: dna (5'-d(*ap*tp*ap*ap*tp*tp*gp*gp*gp*cp*ap*ap*gp*tp*cp*tp*a p*gp*gp*ap*a)-3') \n",
       "                       chain: f\n",
+      "                  engineered: yes\n",
       "\n",
       "\n",
-      "            keywords: antigen p53, antitumor protein/dna complex\n",
-      "                name:  tumor suppressor p53 complexed with dna\n",
-      "              author: Y.Cho,S.Gorina,P.D.Jeffrey,N.P.Pavletich\n",
-      "     deposition_date: 1995-07-11\n",
-      "        release_date: 1995-07-11\n",
+      "                       3:\n",
+      "                        misc: \n",
+      "                    molecule: protein (p53 tumor suppressor )\n",
+      "                       chain: a, b, c\n",
+      "                  engineered: yes\n",
+      "\n",
+      "\n",
       "\n",
       "              source:\n",
       "\n",
       "                       1:\n",
+      "                        misc: \n",
       "                   synthetic: yes\n",
-      "                        misc: \n",
-      "\n",
-      "\n",
-      "                       3:\n",
-      "           expression_system: escherichia coli\n",
-      "        expression_system_taxid: 562\n",
-      "         organism_scientific: homo sapiens\n",
-      "                        misc: \n",
-      "                        cell: human vulva carcinoma\n",
-      "        expression_system_plasmid: pet3d\n",
-      "                   cell_line: a431\n",
-      "              organism_taxid: 9606\n",
-      "             organism_common: human\n",
       "\n",
       "\n",
       "                       2:\n",
-      "                   synthetic: yes\n",
       "                        misc: \n",
+      "                   synthetic: yes\n",
       "\n",
       "\n",
-      "          resolution: 2.2\n",
-      " structure_reference:\n",
-      "                   -> n.p.pavletich,k.a.chambers,c.o.pabo the dna-binding domain of p53 contains the four conserved regions and the major mutation hot spots genes dev. v. 7 2556 1993 issn 0890-9369 \n",
-      "                   -> b.vogelstein,k.w.kinzler p53 function and dysfunction cell(cambridge,mass.) v. 70 523 1992 issn 0092-8674 \n"
+      "                       3:\n",
+      "                        misc: \n",
+      "         organism_scientific: homo sapiens\n",
+      "             organism_common: human\n",
+      "              organism_taxid: 9606\n",
+      "                   cell_line: a431\n",
+      "                        cell: human vulva carcinoma\n",
+      "           expression_system: escherichia coli\n",
+      "        expression_system_taxid: 562\n",
+      "        expression_system_plasmid: pet3d\n",
+      "\n",
+      "\n",
+      "            keywords: antigen p53, antitumor protein/dna complex\n",
+      "             journal: AUTH   Y.CHO,S.GORINA,P.D.JEFFREY,N.P.PAVLETICHTITL   CRYSTAL STRUCTURE OF A P53 TUMOR SUPPRESSOR-DNATITL 2 COMPLEX: UNDERSTANDING TUMORIGENIC MUTATIONS.REF    SCIENCE                       V. 265   346 1994REFN                   ISSN 0036-8075PMID   8023157\n"
      ]
     }
    ],
@@ -183,18 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'1': {'molecule': \"dna (5'-d(*tp*tp*tp*cp*cp*tp*ap*gp*ap*cp*tp*tp*gp*cp*cp*cp*a p*ap*tp*tp*a)-3') \", 'misc': '', 'engineered': 'yes', 'chain': 'e'}, '3': {'molecule': 'protein (p53 tumor suppressor )', 'misc': '', 'engineered': 'yes', 'chain': 'a, b, c'}, '2': {'molecule': \"dna (5'-d(*ap*tp*ap*ap*tp*tp*gp*gp*gp*cp*ap*ap*gp*tp*cp*tp*a p*gp*gp*ap*a)-3') \", 'misc': '', 'engineered': 'yes', 'chain': 'f'}}\n",
-      "{'1': {'molecule': 'tumor suppressor p53 (oligomerization domain)', 'misc': '', 'engineered': 'yes', 'chain': 'a, b, c, d'}}\n",
-      "{'1': {'molecule': 'mdm2', 'engineered': 'yes', 'misc': '', 'synonym': 'mdm2', 'chain': 'a'}, '2': {'fragment': 'residues 13 - 29', 'molecule': 'p53', 'misc': '', 'engineered': 'yes', 'chain': 'b'}}\n"
+      "{'1': {'misc': '', 'molecule': \"dna (5'-d(*tp*tp*tp*cp*cp*tp*ap*gp*ap*cp*tp*tp*gp*cp*cp*cp*a p*ap*tp*tp*a)-3') \", 'chain': 'e', 'engineered': 'yes'}, '2': {'misc': '', 'molecule': \"dna (5'-d(*ap*tp*ap*ap*tp*tp*gp*gp*gp*cp*ap*ap*gp*tp*cp*tp*a p*gp*gp*ap*a)-3') \", 'chain': 'f', 'engineered': 'yes'}, '3': {'misc': '', 'molecule': 'protein (p53 tumor suppressor )', 'chain': 'a, b, c', 'engineered': 'yes'}}\n",
+      "{'1': {'misc': '', 'molecule': 'tumor suppressor p53 (oligomerization domain)', 'chain': 'a, b, c, d', 'engineered': 'yes'}}\n",
+      "{'1': {'misc': '', 'molecule': 'mdm2', 'chain': 'a', 'synonym': 'mdm2', 'engineered': 'yes'}, '2': {'misc': '', 'molecule': 'p53', 'chain': 'b', 'fragment': 'residues 13 - 29', 'engineered': 'yes'}}\n"
      ]
     }
    ],
@@ -206,10 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -247,10 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -272,9 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -302,9 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -338,32 +320,30 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
