Functional BED/HTSeq example

--- a/notebooks/01_NGS/Processing_BED_with_HTSeq.ipynb
+++ b/notebooks/01_NGS/Processing_BED_with_HTSeq.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tiago/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "import re\n",
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,10 +111,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num exons: 17 / Begin: 135788323 / End 135837169\n",
+      "Smaller exon: 79 / Larger exon: 1551 / Mean size: 340.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "exon_start = None\n",
+    "exon_end = None\n",
+    "sizes = []\n",
+    "for rec in lct_bed:\n",
+    "    if not rec.name.startswith('CCDS'):\n",
+    "        continue\n",
+    "    interval = rec.iv\n",
+    "    exon_start = min(interval.start, exon_start or interval.start)\n",
+    "    exon_end = max(interval.length, exon_end or interval.end)\n",
+    "    sizes.append(interval.length)\n",
+    "sizes.sort()\n",
+    "print(\"Num exons: %d / Begin: %d / End %d\" % (len(sizes), exon_start, exon_end))\n",
+    "print(\"Smaller exon: %d / Larger exon: %d / Mean size: %.1f\" % (sizes[0], sizes[-1], sum(sizes)/len(sizes)))"
+   ]
   }
  ],
  "metadata": {
@@ -124,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
