--- a/notebooks/06_Prot/mmCIF.ipynb
+++ b/notebooks/06_Prot/mmCIF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,28 +11,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2018-08-02 09:23:30--  http://www.rcsb.org/pdb/download/downloadFile.do?fileFormat=cif&compression=NO&structureId=1TUP\n",
+      "--2018-08-02 15:20:59--  http://www.rcsb.org/pdb/download/downloadFile.do?fileFormat=cif&compression=NO&structureId=1TUP\n",
       "Resolving www.rcsb.org (www.rcsb.org)... 132.249.213.190\n",
       "Connecting to www.rcsb.org (www.rcsb.org)|132.249.213.190|:80... connected.\n",
       "HTTP request sent, awaiting response... 301 Moved Permanently\n",
       "Location: http://files.rcsb.org/download/1TUP.cif [following]\n",
-      "--2018-08-02 09:23:31--  http://files.rcsb.org/download/1TUP.cif\n",
+      "--2018-08-02 15:20:59--  http://files.rcsb.org/download/1TUP.cif\n",
       "Resolving files.rcsb.org (files.rcsb.org)... 132.249.213.137\n",
       "Connecting to files.rcsb.org (files.rcsb.org)|132.249.213.137|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: unspecified [application/octet-stream]\n",
       "Saving to: ‘1tup.cif’\n",
       "\n",
-      "1tup.cif                [      <=>           ] 650.39K  61.1KB/s    in 10s     \n",
+      "1tup.cif                [  <=>               ] 650.39K  1.59MB/s    in 0.4s    \n",
       "\n",
-      "2018-08-02 09:23:42 (62.2 KB/s) - ‘1tup.cif’ saved [665995]\n",
+      "2018-08-02 15:21:00 (1.59 MB/s) - ‘1tup.cif’ saved [665995]\n",
       "\n"
      ]
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -72,12 +72,12 @@
    ],
    "source": [
     "parser = PDB.MMCIFParser()\n",
-    "p53_1tup = parser.get_structure('P53', '1tup.cif')"
+    "p53_1tup = parser.get_structure('P53_HUMAN', '1tup.cif')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1637,13 +1637,7 @@
       "_ndb_struct_na_base_pair_step.i_symmetry_2 ['1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555', '1_555']\n",
       "\n",
       "_ndb_struct_na_base_pair_step.j_label_asym_id_2 ['B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B', 'B']\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "_ndb_struct_na_base_pair_step.j_label_comp_id_2 ['DA', 'DG', 'DG', 'DA', 'DT', 'DC', 'DT', 'DG', 'DA', 'DA', 'DC', 'DG', 'DG', 'DG', 'DT', 'DT', 'DA', 'DA', 'DT']\n",
       "\n",
       "_ndb_struct_na_base_pair_step.j_label_seq_id_2 ['20', '19', '18', '17', '16', '15', '14', '13', '12', '11', '10', '9', '8', '7', '6', '5', '4', '3', '2']\n",
@@ -1655,7 +1649,13 @@
       "_ndb_struct_na_base_pair_step.slide ['-0.620', '-1.217', '-0.345', '-1.400', '0.160', '-0.008', '-0.423', '-0.651', '-0.391', '0.560', '0.871', '-0.448', '-0.151', '-0.130', '0.745', '-0.332', '-0.688', '0.195', '0.432']\n",
       "\n",
       "_ndb_struct_na_base_pair_step.rise ['3.741', '2.684', '3.760', '3.170', '2.981', '3.109', '3.087', '3.168', '3.880', '3.585', '3.025', '3.250', '3.332', '3.647', '3.232', '2.970', '3.649', '3.271', '3.556']\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "_ndb_struct_na_base_pair_step.tilt ['5.708', '-2.725', '-5.425', '-2.577', '-4.735', '5.555', '-3.337', '3.030', '-2.048', '7.979', '-3.653', '6.710', '-0.972', '2.985', '2.139', '-6.086', '1.758', '-0.683', '6.310']\n",
       "\n",
       "_ndb_struct_na_base_pair_step.roll ['-6.993', '6.897', '7.036', '11.715', '1.800', '-7.797', '7.779', '-8.083', '6.933', '-3.980', '3.670', '2.917', '-3.113', '5.759', '3.968', '0.308', '0.063', '-3.751', '15.825']\n",
