Stuff for extra chapter

--- a/notebooks/Welcome.ipynb
+++ b/notebooks/Welcome.ipynb
@@ -216,6 +216,7 @@
    "source": [
     "![example](09_Other/example.png)\n",
     "\n",
+    "* [Inferring shared chromosomal segments with Germline](09_Other/Germline.ipynb)\n",
     "* [Accessing the Global Biodiversity Information Facility (GBIF) via REST](09_Other/GBIF.ipynb)\n",
     "* [Geo-referencing GBIF datasets](09_Other/GBIF_extra.ipynb)\n",
     "* [Plotting protein interactions with Cytoscape the hard way](09_Other/Cytoscape.ipynb)"
@@ -245,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
