--- a/notebooks/09_Other/Germline.ipynb
+++ b/notebooks/09_Other/Germline.ipynb
@@ -6,19 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/phase1/analysis_results/shapeit2_phased_haplotypes/\n",
+    "#ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/phase1/analysis_results/shapeit2_phased_haplotypes/ALL.chr21.SHAPEIT2_integrated_phase1_v3.20101123.snps_indels_svs.genotypes.all.vcf.gz\n",
     "#ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/phase1/analysis_results/integrated_call_sets/integrated_call_samples.20101123.ped\n",
     "\n",
-    "##/qctool -g ALL.chr21.SHAPEIT2_integrated_phase1_v3.20101123.snps_indels_svs.genotypes.all.vcf.gz -og 21.haps -ofiletype shapeit_haplotypes -os 21.sample\n",
     "\n",
     "#https://mathgen.stats.ox.ac.uk/impute/scripts/vcf2impute_legend_haps\n",
     "#perl vcf2impute_legend_haps -vcf ALL.chr21.SHAPEIT2_integrated_phase1_v3.20101123.snps_indels_svs.genotypes.all.vcf.gz -leghap 21 -chr 21 -snps_only\n",
     "#python merge.py 21.hap.gz 21.legend.gz 21 > 21.merge\n",
     "#python clean_sample.py < 21.sample_list > 21.sample\n",
-    "##maintain_snps.py < 21.haps > 21-snps.haps \n",
-    "##impute_to_ped  snps.haps output.SHAPEIT.20140226.chr21.wgs_sites.haps.sample conv\n",
     "#impute_to_ped  21.merge 21.sample g21\n",
-    "#germline  -input g21.ped 21.map -output good"
+    "#germline  -input g21.ped 21.map -output good\n",
+    "#gzip good.match.gz"
    ]
   },
   {
@@ -28,6 +26,7 @@
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
+    "import gzip\n",
     "\n",
     "import scipy.stats as stats"
    ]
@@ -38,13 +37,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "germline_file = 'good.match'\n",
+    "germline_file = 'good.match.gz'\n",
     "sample_file = 'integrated_call_samples.20101123.ped'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +52,7 @@
     "selected_inds = {}\n",
     "pop_inds = defaultdict(list)\n",
     "\n",
-    "with open(germline_file, 'rt', encoding='utf-8') as f:\n",
+    "with gzip.open(germline_file, 'rt', encoding='utf-8') as f:\n",
     "    for l in f:\n",
     "        toks = l.rstrip().split()\n",
     "        inds.add(toks[1])\n",
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +84,7 @@
     "sizes = []\n",
     "all_sizes = []\n",
     "shared = defaultdict(int)\n",
-    "with open(germline_file, 'rt', encoding='utf-8') as f:\n",
+    "with gzip.open(germline_file, 'rt', encoding='utf-8') as f:\n",
     "    for l in f:\n",
     "        toks = l.rstrip().split()\n",
     "        ind1 = toks[1]\n",
@@ -104,48 +103,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DescribeResult(nobs=173, minmax=(3.008, 24.508), mean=4.792404624277457, variance=7.752351021373841, skewness=3.6276764010875655, kurtosis=17.516780728998093)\n",
-      "DescribeResult(nobs=43736, minmax=(3.008, 24.508), mean=3.4114706191695627, variance=0.05003760874003961, skewness=39.76406261037047, kurtosis=2745.5735275532415)\n"
+      "DescribeResult(nobs=43736, minmax=(3.008, 24.508), mean=3.4114706191695627, variance=0.05003760874003961, skewness=39.76406261037047, kurtosis=2745.5735275532415)\n",
+      "DescribeResult(nobs=173, minmax=(3.008, 24.508), mean=4.792404624277457, variance=7.752351021373841, skewness=3.6276764010875655, kurtosis=17.516780728998093)\n"
      ]
     }
    ],
    "source": [
-    "#plt.hist(sizes, bins=100)\n",
-    "print(stats.describe(sizes))\n",
-    "print(stats.describe(all_sizes))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('CHS', 'CHS')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "larger_shared\n",
-    "ind_pop[larger_shared[1]], ind_pop[larger_shared[2]]"
+    "print(stats.describe(all_sizes))\n",
+    "print(stats.describe(sizes))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(24.508, 'HG00501', 'HG00512')\n",
+      "CHS CHS\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(larger_shared)\n",
+    "print(ind_pop[larger_shared[1]], ind_pop[larger_shared[2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -183,8 +179,6 @@
     }
    ],
    "source": [
-    "import scipy\n",
-    "scipy.median\n",
     "for pop, total_sizes in pop_shared.items():\n",
     "    print(\"%s %3d %3d %*.2f %*.2f\" % (pop,\n",
     "                                    len(pop_inds[pop]), len(total_sizes),\n",
